# ts-rs

macros/: Cargo.toml
macros/src/: lib.rs  utils.rs
macros/src/types/: mod.rs  named.rs  newtype.rs  tuple.rs  unit.rs
ts-rs/src/: lib.rs
ts-rs/tests/: borrowed_fields.rs  cow_fields.rs
