[package]
name = "ts-rs-macros"
version = "2.1.2"
authors = ["Moritz Bischof <moritz.bischof@aleph-alpha.de>"]
edition = "2018"
description = "derive macro for ts-rs"
license = "MIT"
homepage = "https://github.com/Aleph-Alpha/ts-rs"
repository = "https://github.com/Aleph-Alpha/ts-rs"

[features]
serde-compat = ["termcolor"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full", "extra-traits"] }
Inflector = "0.11"
termcolor = { version = "1", optional = true }
regex = "1.4.3"
once_cell = "1.7.2"
